vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__component_declaration__tests__component_unclosed_port_list.snap
---
source: vhdl_syntax/src/parser/productions/component_declaration.rs
expression: "$crate :: parser :: test_utils :: render_recovery(code, & tree, & diags)"
---
== source ==
component fifo is
  port (
    clk : in std_logic;
    data : out std_logic_vector(7 downto 0)
end component;

== tree ==
ComponentDeclaration
  ComponentDeclarationPreamble
    Keyword(Component)
    Identifier 'fifo'
    Keyword(Is)
  PortClause
    Keyword(Port)
    LeftPar
    InterfaceList
      InterfaceObjectDeclaration
        IdentifierList
          Identifier 'clk'
        Colon
        Keyword(In)
        SubtypeIndication
          Name
            NameDesignatorPrefix
              Identifier 'std_logic'
      SemiColon
      InterfaceObjectDeclaration
        IdentifierList
          Identifier 'data'
        Colon
        Keyword(Out)
        SubtypeIndication
          Name
            NameDesignatorPrefix
              Identifier 'std_logic_vector'
            ParenthesizedName
              LeftPar
              AssociationList
                AssociationElement
                  ActualPart
                    ActualPartExpression
                      BinaryExpression
                        LiteralExpression
                          AbstractLiteral '7'
                        Keyword(Downto)
                        LiteralExpression
                          AbstractLiteral '0'
              RightPar
  ComponentDeclarationEpilogue
    Keyword(End)
    Keyword(Component)
    SemiColon

== diagnostics ==
4:44 expected ')'
4:44 expected ';'
