vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__component_declaration__tests__components_with_generics.snap
---
source: vhdl_syntax/src/parser/productions/component_declaration.rs
expression: "to_test_text(Parser::component_declaration,\n\"\\\ncomponent foo is\n  generic (\n    foo : natural\n  );\nend component;\n\",)"
---
ComponentDeclaration
  ComponentDeclarationPreamble
    Keyword(Component)
    Identifier 'foo'
    Keyword(Is)
  GenericClause
    GenericClausePreamble
      Keyword(Generic)
      LeftPar
    InterfaceList
      InterfaceObjectDeclaration
        IdentifierList
          Identifier 'foo'
        Colon
        SubtypeIndication
          Name
            NameDesignatorPrefix
              Identifier 'natural'
    GenericClauseEpilogue
      RightPar
      SemiColon
  ComponentDeclarationEpilogue
    Keyword(End)
    Keyword(Component)
    SemiColon
