vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__component_declaration__tests__simple_components-2.snap
---
source: vhdl_syntax/src/parser/productions/component_declaration.rs
expression: "to_test_text(Parser::component_declaration,\n\"\\\ncomponent foo is\nend component;\n\")"
---
ComponentDeclaration
  ComponentDeclarationPreamble
    Keyword(Component)
    Identifier 'foo'
    Keyword(Is)
  ComponentDeclarationEpilogue
    Keyword(End)
    Keyword(Component)
    SemiColon
