vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__component_declaration__tests__simple_components.snap
---
source: vhdl_syntax/src/parser/productions/component_declaration.rs
expression: "to_test_text(Parser::component_declaration, \"\\\ncomponent foo\nend component;\n\")"
---
ComponentDeclaration
  Keyword(Component)
  Identifier 'foo'
  Keyword(End)
  Keyword(Component)
  SemiColon
